--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site by Guy Shloman - Guy Shloman's Portfolio Website."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
@@ -18,7 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Guy Shloman</title>
   </head>
   <body>
     <div id="root"></div>
